# cppncurses

./: .gitignore  LICENSE  Makefile.in  README.md  configure  configure.ac  cppncurses.pc.in
include/cppncurses/: CurseStreambuf.h  Types.h  Window.h  WindowManager.h
include/cppncurses/interfaces/: Window_I.h
src/: CurseStreambuf.cpp  Window.cpp  WindowManager.cpp
src.test/: main.cpp
